--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ a:active {
 
 .container {
   display: grid;
-  grid-template-columns: 100%;
+  grid-template-columns: 85% 15%;
   grid-template-rows: auto;
   grid-template-areas:
   'a b';
