--- a/style.css
+++ b/style.css
@@ -16,7 +16,17 @@ body {
 
 
 
+.container {
+  display: grid;
+  grid-template-columns: 57% 43%;
+  grid-template-rows: auto;
+  grid-template-areas:
+  'a b';
+   height: 95vh;
+	gap: 20px;
+	
 
+}
 
 
 
